Corrected portfolio's wrap.

--- a/css/person.css
+++ b/css/person.css
@@ -1,7 +1,7 @@
 .person {
     display: flex;
 
-    align-items: flex-start;
+    align-items: center;
 }
 
 .person__img {
